package edu.hitsz.Pattern;

public class CommonMode {
}
