package edu.hitsz.Pattern;

public class DifficultMode {
}
