package edu.hitsz.Pattern;

public class EasyMode {
}
